<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/mediacontroller_topLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_player_status"
            >
            <TextView
                android:id="@+id/mediacontroller_file_name"
                style="@style/MediaController_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:text="ahsjfhas"
                android:singleLine="true" />
            <ImageView
                android:id="@+id/media_im_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_battery_10"/>
            <TextView
                android:id="@+id/media_tv_systemTime"
                style="@style/MediaController_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="时间"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/mediacontroller_bg"
            >
            <Button
                android:id="@+id/media_bt_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_voice_selector"/>
            <SeekBar
                android:id="@+id/media_pb_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:maxHeight="6dp"
                android:minHeight="6dp"
                android:layout_marginRight="60dp"/>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/mediacontroller_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/mediacontroller_bg"

        >
        <SeekBar
            android:id="@+id/mediacontroller_seekbar"
            style="@style/MediaController_SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:max="1000"
          />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mediacontroller_seekbar"
            android:layout_marginBottom="5dp">
            <ImageButton
                android:id="@+id/mediacontroller_exit"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_exit_selector"
                />
            <ImageButton
                android:id="@+id/mediacontroller_prev"
                android:padding="10dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/mediacontroller_exit"
                android:layout_marginLeft="5dp"
                android:background="@drawable/mediacontroller_button"
                android:contentDescription="@string/mediacontroller_prev"
                android:src="@drawable/mediacontrol_prev"/>
            <ImageButton
                android:id="@+id/mediacontroller_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/mediacontroller_prev"
                android:layout_marginLeft="5dp"
                android:background="@drawable/mediacontroller_button"
                android:contentDescription="@string/mediacontroller_play_pause"
                android:src="@drawable/mediacontroller_pause" />
            <ImageButton
                android:id="@+id/mediacontroller_next"
                android:padding="10dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:scaleType="fitXY"
                android:layout_toRightOf="@+id/mediacontroller_play_pause"
                android:background="@drawable/mediacontroller_button"
                android:contentDescription="@string/mediacontroller_next"
                android:src="@drawable/mediacontrol_next"/>
            <TextView
                android:id="@+id/mediacontroller_time_current"
                style="@style/MediaController_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/mediacontroller_next" />
            <TextView
                android:id="@+id/Separator"
                style="@style/MediaController_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/mediacontroller_time_current"
                android:text="/"/>
            <TextView
                android:id="@+id/mediacontroller_time_total"
                style="@style/MediaController_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/Separator"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                />

            <ImageButton
                android:id="@+id/mediacontroller_love"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:scaleType="fitXY"
                android:layout_toEndOf="@+id/mediacontroller_time_total"
                android:contentDescription="@string/mediacontroller_love"
                android:background="@drawable/mediacontroller_button"
                android:src="@drawable/mediacontrol_love"
                />

            <Button
                android:id="@+id/DoubleSpeed"
                style="@style/MediaController_Text"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/mediacontroller_love"
                android:layout_marginLeft="10dp"
                android:text="@string/DoubleSpeed"
               android:background="@drawable/mediacontroller_button"
                />
            <!--android:background="@drawable/shape"-->
            <ImageButton
                android:id="@+id/mediacontroller_download"
                android:padding="10dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/mediacontroller_download"
                android:layout_toRightOf="@id/DoubleSpeed"
                android:background="@drawable/mediacontroller_button"
                android:src="@drawable/mediacontrol_download"/>

            <ImageButton
                android:id="@+id/mediacontroller_share"
                android:padding="10dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/mediacontroller_share"
                android:layout_toRightOf="@id/mediacontroller_download"
                android:background="@drawable/mediacontroller_button"
                android:src="@drawable/mediacontroller_share"/>

            <ImageButton
                android:id="@+id/mediacontroller_video_siwch_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/mediacontroller_share"
                android:background="@drawable/btn_video_siwch_screen_full_selector"
                />
        </RelativeLayout>

    </RelativeLayout>
    <ListView
        android:id="@+id/PlayModeListView"
        android:visibility="gone"
        android:layout_width="120dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:background="@color/mediacontroller_bg"
        tools:ignore="NotSibling">
    </ListView>
    <!--android:layout_above="@+id/mediacontroller_relativeLayout"-->
    <LinearLayout
        android:id="@+id/TipLinearLayout"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@color/mediacontroller_bg"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/TipVoiceIcon"
            android:layout_width="50dp"
            android:visibility="gone"
            android:layout_height="50dp"
            android:src="@drawable/voice"/>
        <ImageView
            android:id="@+id/TipBrightnessIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:src="@drawable/brightness"/>
        <SeekBar
            android:id="@+id/TipSeekBar"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:max="1000"/>
        <TextView
            android:id="@+id/TipPlayProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="30dp"
            android:text="00:00"/>
        <ImageButton
            android:id="@+id/TipPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/mediacontroller_play"
            />
    </LinearLayout>
</RelativeLayout>